Added legacy code for SVD-2-LSTM

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,24 +1,34 @@
 cmake_minimum_required(VERSION 3.10)
 add_subdirectory(dma)
 add_subdirectory(kernel)
-add_subdirectory(tb)
+add_subdirectory(lstm)
+add_subdirectory(math_utils)
+add_subdirectory(hls_utils)
+add_subdirectory(testbenches)
 
-# # NOTE: Each library/object will have an identifier and that identifier will then
-# # be used to link the final executable, i.e. target_link_libraries(ProjectName LibraryName)
-# add_library(AXIS_LIB STATIC ${CMAKE_SOURCE_DIR}/src/axis_lib.cpp)
-# target_include_directories(AXIS_LIB PUBLIC ${CMAKE_SOURCE_DIR}/include)
-# target_include_directories(AXIS_LIB PUBLIC ${VIVADO_INCLUDE_DIRS})
+# NOTE: Each library/object will have an identifier and that identifier will then
+# be used to link the final executable, i.e. target_link_libraries(ProjectName LibraryName)
 
-# add_library(PONG STATIC ${CMAKE_SOURCE_DIR}/src/pong.cpp)
-# target_include_directories(PONG PUBLIC ${CMAKE_SOURCE_DIR}/include)
-# target_include_directories(PONG PUBLIC ${VIVADO_INCLUDE_DIRS})
-# target_include_directories(PONG PUBLIC ${OpenCv_INCLUDE_DIRS})
-# target_link_libraries(PONG GAME)
-# target_link_libraries(PONG DQNET)
+add_library(SVD_PARAMS STATIC ${CMAKE_SOURCE_DIR}/src/svd_ip.cpp)
+target_include_directories(SVD_PARAMS PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(SVD_PARAMS PUBLIC ${VIVADO_INCLUDE_DIRS})
+target_include_directories(SVD_PARAMS PUBLIC ${OpenCv_INCLUDE_DIRS})
+target_link_libraries(SVD_PARAMS ${OpenCv_LIBS})
+target_compile_options(SVD_PARAMS PRIVATE -fno-builtin)
+
+add_library(SVD_IP STATIC ${CMAKE_SOURCE_DIR}/src/svd_ip.cpp)
+target_include_directories(SVD_IP PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(SVD_IP PUBLIC ${VIVADO_INCLUDE_DIRS})
+target_include_directories(SVD_IP PUBLIC ${OpenCv_INCLUDE_DIRS})
+target_link_libraries(SVD_IP ${OpenCv_LIBS})
+target_link_libraries(SVD_IP SVD_KERNEL)
+target_compile_options(SVD_IP PRIVATE -fno-builtin)
+
 
 add_library(SVD STATIC ${CMAKE_SOURCE_DIR}/src/svd.cpp)
 target_include_directories(SVD PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(SVD PUBLIC ${VIVADO_INCLUDE_DIRS})
 target_include_directories(SVD PUBLIC ${OpenCv_INCLUDE_DIRS})
 target_link_libraries(SVD ${OpenCv_LIBS})
-# target_link_libraries(SVD PONG)
+target_link_libraries(SVD SVD_IP)
+target_compile_options(SVD PRIVATE -fno-builtin)
