--- a/src/lstm/sw/CMakeLists.txt
+++ b/src/lstm/sw/CMakeLists.txt
@@ -5,15 +5,12 @@ target_include_directories(SOFT_LSTM PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(SOFT_LSTM PUBLIC ${VIVADO_INCLUDE_DIRS})
 target_include_directories(SOFT_LSTM PUBLIC ${OpenCv_INCLUDE_DIRS})
 target_link_libraries(SOFT_LSTM ${OpenCv_LIBS})
-target_link_libraries(SOFT_LSTM BLAS_UTILS)
-target_link_libraries(SOFT_LSTM ACTIVATION_FUNCTIONS)
 
-add_executable(SOFT_SVD_MODEL ${CMAKE_SOURCE_DIR}/src/lstm/sw/soft_svd_model.cpp)
-target_include_directories(SOFT_SVD_MODEL PUBLIC ${CMAKE_SOURCE_DIR}/include)
-target_include_directories(SOFT_SVD_MODEL PUBLIC ${VIVADO_INCLUDE_DIRS})
-target_include_directories(SOFT_SVD_MODEL PUBLIC ${OpenCv_INCLUDE_DIRS})
-target_link_libraries(SOFT_SVD_MODEL ${OpenCv_LIBS})
-target_link_libraries(SOFT_SVD_MODEL ACTIVATION_FUNCTIONS)
+add_executable(SOFT_LSTM_SVD ${CMAKE_SOURCE_DIR}/src/lstm/sw/soft_lstm_svd.cpp)
+target_include_directories(SOFT_LSTM_SVD PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(SOFT_LSTM_SVD PUBLIC ${VIVADO_INCLUDE_DIRS})
+target_include_directories(SOFT_LSTM_SVD PUBLIC ${OpenCv_INCLUDE_DIRS})
+target_link_libraries(SOFT_LSTM_SVD ${OpenCv_LIBS})
 
 # add_executable(TEST_AXIS_LIB ${CMAKE_SOURCE_DIR}/src/tb/test_axis_lib.cpp)
 # target_include_directories(TEST_AXIS_LIB PUBLIC ${CMAKE_SOURCE_DIR}/include)
