Added data stuctures for storage handling.

--- a/src/lstm/CMakeLists.txt
+++ b/src/lstm/CMakeLists.txt
@@ -2,12 +2,12 @@ cmake_minimum_required(VERSION 3.10)
 add_subdirectory(hls)
 add_subdirectory(sw)
 
-# add_executable(TEST_AXIS_LIB ${CMAKE_SOURCE_DIR}/src/tb/test_axis_lib.cpp)
-# target_include_directories(TEST_AXIS_LIB PUBLIC ${CMAKE_SOURCE_DIR}/include)
-# target_include_directories(TEST_AXIS_LIB PUBLIC ${VIVADO_INCLUDE_DIRS})
-# target_include_directories(TEST_AXIS_LIB PUBLIC ${OpenCv_INCLUDE_DIRS})
-# target_link_libraries(TEST_AXIS_LIB ${OpenCv_LIBS})
-# target_link_libraries(TEST_AXIS_LIB AXIS_LIB)
+add_executable(LSTM_DATA_HANDLER ${CMAKE_SOURCE_DIR}/src/lstm/lstm_data_handler.cpp)
+target_include_directories(LSTM_DATA_HANDLER PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(LSTM_DATA_HANDLER PUBLIC ${VIVADO_INCLUDE_DIRS})
+target_include_directories(LSTM_DATA_HANDLER PUBLIC ${OpenCv_INCLUDE_DIRS})
+target_link_libraries(LSTM_DATA_HANDLER ${OpenCv_LIBS})
+# target_link_libraries(LSTM_DATA_HANDLER AXIS_LIB)
 
 # add_executable(TEST_CONV_LAYER ${CMAKE_SOURCE_DIR}/src/tb/test_conv_layer.cpp)
 # target_include_directories(TEST_CONV_LAYER PUBLIC ${CMAKE_SOURCE_DIR}/include)
