--- a/src/lstm/CMakeLists.txt
+++ b/src/lstm/CMakeLists.txt
@@ -2,46 +2,8 @@ cmake_minimum_required(VERSION 3.10)
 add_subdirectory(hls)
 add_subdirectory(sw)
 
-add_executable(LSTM_DATA_HANDLER ${CMAKE_SOURCE_DIR}/src/lstm/lstm_data_handler.cpp)
+add_library(LSTM_DATA_HANDLER STATIC ${CMAKE_SOURCE_DIR}/src/lstm/lstm_data_handler.cpp)
 target_include_directories(LSTM_DATA_HANDLER PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(LSTM_DATA_HANDLER PUBLIC ${VIVADO_INCLUDE_DIRS})
 target_include_directories(LSTM_DATA_HANDLER PUBLIC ${OpenCv_INCLUDE_DIRS})
 target_link_libraries(LSTM_DATA_HANDLER ${OpenCv_LIBS})
-# target_link_libraries(LSTM_DATA_HANDLER AXIS_LIB)
-
-# add_executable(TEST_CONV_LAYER ${CMAKE_SOURCE_DIR}/src/tb/test_conv_layer.cpp)
-# target_include_directories(TEST_CONV_LAYER PUBLIC ${CMAKE_SOURCE_DIR}/include)
-# target_include_directories(TEST_CONV_LAYER PUBLIC ${VIVADO_INCLUDE_DIRS})
-# target_link_libraries(TEST_CONV_LAYER CONV_LAYER)
-
-# add_executable(TEST_DENSE_LAYER ${CMAKE_SOURCE_DIR}/src/tb/test_dense_layer.cpp)
-# target_include_directories(TEST_DENSE_LAYER PUBLIC ${CMAKE_SOURCE_DIR}/include)
-# target_include_directories(TEST_DENSE_LAYER PUBLIC ${VIVADO_INCLUDE_DIRS})
-# target_link_libraries(TEST_DENSE_LAYER CONV_LAYER)
-
-# add_executable(TEST_DQNET ${CMAKE_SOURCE_DIR}/src/tb/test_dqnet.cpp)
-# target_include_directories(TEST_DQNET PUBLIC ${CMAKE_SOURCE_DIR}/include)
-# target_include_directories(TEST_DQNET PUBLIC ${VIVADO_INCLUDE_DIRS})
-# target_link_libraries(TEST_DQNET DQNET)
-
-# add_executable(TEST_GAME ${CMAKE_SOURCE_DIR}/src/tb/test_game.cpp)
-# target_include_directories(TEST_GAME PUBLIC ${CMAKE_SOURCE_DIR}/include)
-# target_include_directories(TEST_GAME PUBLIC ${VIVADO_INCLUDE_DIRS})
-# target_include_directories(TEST_GAME PUBLIC ${OpenCv_INCLUDE_DIRS})
-# target_link_libraries(TEST_GAME ${OpenCv_LIBS})
-# target_link_libraries(TEST_GAME GAME)
-
-# add_executable(TEST_PONG ${CMAKE_SOURCE_DIR}/src/tb/test_pong.cpp)
-# target_include_directories(TEST_PONG PUBLIC ${CMAKE_SOURCE_DIR}/include)
-# target_include_directories(TEST_PONG PUBLIC ${VIVADO_INCLUDE_DIRS})
-# target_include_directories(TEST_PONG PUBLIC ${OpenCv_INCLUDE_DIRS})
-# target_link_libraries(TEST_PONG ${OpenCv_LIBS})
-# target_link_libraries(TEST_PONG PONG)
-
-# # add_test(NAME TestOpenCv COMMAND OPENCV_TEST)
-# # add_test(NAME TestAxisLib COMMAND TEST_AXIS_LIB)
-# # add_test(NAME TestConvLayer COMMAND TEST_CONV_LAYER)
-# add_test(NAME TestDenseLayer COMMAND TEST_DENSE_LAYER)
-# # add_test(NAME TestDQNet COMMAND TEST_DQNET)
-# # add_test(NAME TestGame COMMAND TEST_GAME)
-# # add_test(NAME TestPong COMMAND TEST_PONG)
