Added call to software model. (There might still be a segmentation-fault bug)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,4 +31,5 @@ target_include_directories(SVD PUBLIC ${OpenCv_INCLUDE_DIRS})
 target_link_libraries(SVD ${OpenCv_LIBS})
 target_link_libraries(SVD SVD_IP)
 target_link_libraries(SVD LSTM_SVD)
+target_link_libraries(SVD SOFT_LSTM_SVD)
 target_compile_options(SVD PRIVATE -fno-builtin)
