--- a/src/lstm/sw/CMakeLists.txt
+++ b/src/lstm/sw/CMakeLists.txt
@@ -11,3 +11,5 @@ target_include_directories(SOFT_LSTM_SVD PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(SOFT_LSTM_SVD PUBLIC ${VIVADO_INCLUDE_DIRS})
 target_include_directories(SOFT_LSTM_SVD PUBLIC ${OpenCv_INCLUDE_DIRS})
 target_link_libraries(SOFT_LSTM_SVD ${OpenCv_LIBS})
+target_link_libraries(SOFT_LSTM_SVD BLAS_UTILS)
+target_link_libraries(SOFT_LSTM_SVD ACTIVATION_FUNCTIONS)
