--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,16 @@ add_compile_definitions(HLS_NO_XIL_FPO_LIB)
 # add_compile_definitions(USE_FLOAT)
 add_compile_definitions(DEBUG_LEVEL=2)
 
+add_compile_definitions(INPUT_SIZE=1024)
+add_compile_definitions(HIDDEN_SIZE=512)
+add_compile_definitions(NUM_GATES=4)
+add_compile_definitions(NUM_SAMPLES=2)
+add_compile_definitions(NUM_TILES_U=32)
+add_compile_definitions(NUM_ZERO_TILES_U=16)
+add_compile_definitions(NUM_TILES_V=64)
+add_compile_definitions(NUM_ZERO_TILES_V=8)
+add_compile_definitions(NUM_TIMESTEPS=4)
+
 # Move executable in bin/, along side the DLLs (copied)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 file(COPY ${OpenCv_LIBS} DESTINATION ${EXECUTABLE_OUTPUT_PATH})
