--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,14 +11,14 @@ add_subdirectory(testbenches)
 
 add_library(SVD_PARAMS STATIC ${CMAKE_SOURCE_DIR}/src/svd_ip.cpp)
 target_include_directories(SVD_PARAMS PUBLIC ${CMAKE_SOURCE_DIR}/include)
-target_include_directories(SVD_PARAMS PUBLIC ${VIVADO_INCLUDE_DIRS})
+target_include_directories(SVD_PARAMS PUBLIC ${HLS_INCLUDE_DIRS})
 target_include_directories(SVD_PARAMS PUBLIC ${OpenCv_INCLUDE_DIRS})
 target_link_libraries(SVD_PARAMS ${OpenCv_LIBS})
 target_compile_options(SVD_PARAMS PRIVATE -fno-builtin)
 
 add_library(SVD_IP STATIC ${CMAKE_SOURCE_DIR}/src/svd_ip.cpp)
 target_include_directories(SVD_IP PUBLIC ${CMAKE_SOURCE_DIR}/include)
-target_include_directories(SVD_IP PUBLIC ${VIVADO_INCLUDE_DIRS})
+target_include_directories(SVD_IP PUBLIC ${HLS_INCLUDE_DIRS})
 target_include_directories(SVD_IP PUBLIC ${OpenCv_INCLUDE_DIRS})
 target_link_libraries(SVD_IP ${OpenCv_LIBS})
 target_compile_options(SVD_IP PRIVATE -fno-builtin)
@@ -26,7 +26,7 @@ target_link_libraries(SVD_IP SVD_KERNEL)
 
 add_library(SVD STATIC ${CMAKE_SOURCE_DIR}/src/svd.cpp)
 target_include_directories(SVD PUBLIC ${CMAKE_SOURCE_DIR}/include)
-target_include_directories(SVD PUBLIC ${VIVADO_INCLUDE_DIRS})
+target_include_directories(SVD PUBLIC ${HLS_INCLUDE_DIRS})
 target_include_directories(SVD PUBLIC ${OpenCv_INCLUDE_DIRS})
 target_compile_options(SVD PRIVATE -fno-builtin)
 target_link_libraries(SVD ${OpenCv_LIBS})
