--- a/src/kernel/CMakeLists.txt
+++ b/src/kernel/CMakeLists.txt
@@ -3,13 +3,13 @@ cmake_minimum_required(VERSION 3.10)
 add_library(U_KERNEL STATIC ${CMAKE_SOURCE_DIR}/src/kernel/u_kernel.cpp)
 target_include_directories(U_KERNEL PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(U_KERNEL PUBLIC ${CMAKE_SOURCE_DIR}/include/kernel)
-target_include_directories(U_KERNEL PUBLIC ${VIVADO_INCLUDE_DIRS})
+target_include_directories(U_KERNEL PUBLIC ${HLS_INCLUDE_DIRS})
 target_compile_options(U_KERNEL PRIVATE -fno-builtin)
 
 add_library(S_KERNEL STATIC ${CMAKE_SOURCE_DIR}/src/kernel/s_kernel.cpp)
 target_include_directories(S_KERNEL PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(S_KERNEL PUBLIC ${CMAKE_SOURCE_DIR}/include/kernel)
-target_include_directories(S_KERNEL PUBLIC ${VIVADO_INCLUDE_DIRS})
+target_include_directories(S_KERNEL PUBLIC ${HLS_INCLUDE_DIRS})
 target_compile_options(S_KERNEL PRIVATE -fno-builtin)
 
 add_library(V_KERNEL STATIC ${CMAKE_SOURCE_DIR}/src/kernel/v_kernel.cpp)
