--- a/src/lstm/hls/CMakeLists.txt
+++ b/src/lstm/hls/CMakeLists.txt
@@ -2,13 +2,13 @@ cmake_minimum_required(VERSION 3.10)
 
 add_library(LSTM_HARDWARE STATIC ${CMAKE_SOURCE_DIR}/src/lstm/hls/lstm_hardware.cpp)
 target_include_directories(LSTM_HARDWARE PUBLIC ${CMAKE_SOURCE_DIR}/include)
-target_include_directories(LSTM_HARDWARE PUBLIC ${VIVADO_INCLUDE_DIRS})
+target_include_directories(LSTM_HARDWARE PUBLIC ${HLS_INCLUDE_DIRS})
 target_include_directories(LSTM_HARDWARE PUBLIC ${OpenCv_INCLUDE_DIRS})
 target_link_libraries(LSTM_HARDWARE ${OpenCv_LIBS})
 
 add_library(LSTM_SVD STATIC ${CMAKE_SOURCE_DIR}/src/lstm/hls/lstm_svd.cpp)
 target_include_directories(LSTM_SVD PUBLIC ${CMAKE_SOURCE_DIR}/include)
-target_include_directories(LSTM_SVD PUBLIC ${VIVADO_INCLUDE_DIRS})
+target_include_directories(LSTM_SVD PUBLIC ${HLS_INCLUDE_DIRS})
 target_include_directories(LSTM_SVD PUBLIC ${OpenCv_INCLUDE_DIRS})
 target_link_libraries(LSTM_SVD ${OpenCv_LIBS})
 target_link_libraries(LSTM_SVD ${OpenCv_LIBS})
@@ -24,7 +24,7 @@ target_link_libraries(LSTM_SVD ${OpenCv_LIBS})
 set(LSTM_SVD_EMULATOR_H ${CMAKE_SOURCE_DIR}/include/math_utils/activation_functions.h)
 add_library(LSTM_SVD_EMULATOR STATIC ${CMAKE_SOURCE_DIR}/src/lstm/hls/lstm_svd_emulator.cpp ${LSTM_SVD_EMULATOR_H})
 target_include_directories(LSTM_SVD_EMULATOR PUBLIC ${CMAKE_SOURCE_DIR}/include)
-target_include_directories(LSTM_SVD_EMULATOR PUBLIC ${VIVADO_INCLUDE_DIRS})
+target_include_directories(LSTM_SVD_EMULATOR PUBLIC ${HLS_INCLUDE_DIRS})
 target_include_directories(LSTM_SVD_EMULATOR PUBLIC ${OpenCv_INCLUDE_DIRS})
 target_link_libraries(LSTM_SVD_EMULATOR ${OpenCv_LIBS})
 # target_link_libraries(LSTM_SVD_EMULATOR ACTIVATION_FUNCTIONS)
