--- a/src/testbenches/CMakeLists.txt
+++ b/src/testbenches/CMakeLists.txt
@@ -7,4 +7,12 @@ target_include_directories(TEST_U_KERNEL PUBLIC ${OpenCv_INCLUDE_DIRS})
 target_link_libraries(TEST_U_KERNEL ${OpenCv_LIBS})
 target_link_libraries(TEST_U_KERNEL U_KERNEL)
 
+add_executable(TEST_GEMV_KERNEL ${CMAKE_SOURCE_DIR}/src/testbenches/test_gemv_kernel.cpp)
+target_include_directories(TEST_GEMV_KERNEL PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(TEST_GEMV_KERNEL PUBLIC ${HLS_INCLUDE_DIRS})
+target_include_directories(TEST_GEMV_KERNEL PUBLIC ${OpenCv_INCLUDE_DIRS})
+target_link_libraries(TEST_GEMV_KERNEL ${OpenCv_LIBS})
+target_link_libraries(TEST_GEMV_KERNEL GEMV_KERNEL)
+
 add_test(NAME TestU_Kernel COMMAND TEST_U_KERNEL)
+add_test(NAME TestGemvKernel COMMAND TEST_GEMV_KERNEL)
