HlsLstmSvd: added testbench.

--- a/src/testbenches/CMakeLists.txt
+++ b/src/testbenches/CMakeLists.txt
@@ -28,7 +28,15 @@ target_include_directories(TEST_DENSE_SVD PUBLIC ${OpenCv_INCLUDE_DIRS})
 target_link_libraries(TEST_DENSE_SVD ${OpenCv_LIBS})
 target_link_libraries(TEST_DENSE_SVD DENSE_SVD)
 
+add_executable(TEST_LSTM_SVD ${CMAKE_SOURCE_DIR}/src/testbenches/test_lstm_svd.cpp)
+target_include_directories(TEST_LSTM_SVD PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(TEST_LSTM_SVD PUBLIC ${HLS_INCLUDE_DIRS})
+target_include_directories(TEST_LSTM_SVD PUBLIC ${OpenCv_INCLUDE_DIRS})
+target_link_libraries(TEST_LSTM_SVD ${OpenCv_LIBS})
+target_link_libraries(TEST_LSTM_SVD LSTM_SVD)
+
 add_test(NAME TestU_Kernel COMMAND TEST_U_KERNEL)
 add_test(NAME TestV_Kernel COMMAND TEST_V_KERNEL)
 add_test(NAME TestGemvKernel COMMAND TEST_GEMV_KERNEL)
 add_test(NAME TestDenseSvd COMMAND TEST_DENSE_SVD)
+add_test(NAME TestLstmSvd COMMAND TEST_LSTM_SVD)
