HlsSvdKernel: added testbench.

--- a/src/testbenches/CMakeLists.txt
+++ b/src/testbenches/CMakeLists.txt
@@ -35,8 +35,16 @@ target_include_directories(TEST_LSTM_SVD PUBLIC ${OpenCv_INCLUDE_DIRS})
 target_link_libraries(TEST_LSTM_SVD ${OpenCv_LIBS})
 target_link_libraries(TEST_LSTM_SVD LSTM_SVD)
 
+add_executable(TEST_SVD_KERNEL ${CMAKE_SOURCE_DIR}/src/testbenches/test_svd_kernel.cpp)
+target_include_directories(TEST_SVD_KERNEL PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(TEST_SVD_KERNEL PUBLIC ${HLS_INCLUDE_DIRS})
+target_include_directories(TEST_SVD_KERNEL PUBLIC ${OpenCv_INCLUDE_DIRS})
+target_link_libraries(TEST_SVD_KERNEL ${OpenCv_LIBS})
+target_link_libraries(TEST_SVD_KERNEL SVD_KERNEL)
+
 add_test(NAME TestU_Kernel COMMAND TEST_U_KERNEL)
 add_test(NAME TestV_Kernel COMMAND TEST_V_KERNEL)
 add_test(NAME TestGemvKernel COMMAND TEST_GEMV_KERNEL)
 add_test(NAME TestDenseSvd COMMAND TEST_DENSE_SVD)
 add_test(NAME TestLstmSvd COMMAND TEST_LSTM_SVD)
+add_test(NAME TestSvdKernel COMMAND TEST_SVD_KERNEL)
