SvdParams: converted Tu and Tv to tile size (it was number of tiles).

--- a/src/layers/lstm/hls/CMakeLists.txt
+++ b/src/layers/lstm/hls/CMakeLists.txt
@@ -11,7 +11,6 @@ target_include_directories(LSTM_SVD PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(LSTM_SVD PUBLIC ${HLS_INCLUDE_DIRS})
 target_include_directories(LSTM_SVD PUBLIC ${OpenCv_INCLUDE_DIRS})
 target_link_libraries(LSTM_SVD ${OpenCv_LIBS})
-target_link_libraries(LSTM_SVD ${OpenCv_LIBS})
 # target_link_libraries(LSTM_SVD SVD_PARAMS)
 # target_link_libraries(LSTM_SVD SVD_DMA)
 # target_link_libraries(LSTM_SVD U_KERNEL)
@@ -20,6 +19,12 @@ target_link_libraries(LSTM_SVD ${OpenCv_LIBS})
 # target_link_libraries(LSTM_SVD ACTIVATION_FUNCTIONS)
 # target_link_libraries(LSTM_SVD HLS_DEBUGGING)
 
+add_library(LSTM_SVD_SHARED SHARED ${CMAKE_SOURCE_DIR}/src/layers/lstm/hls/lstm_svd.cpp)
+target_include_directories(LSTM_SVD_SHARED PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(LSTM_SVD_SHARED PUBLIC ${HLS_INCLUDE_DIRS})
+target_include_directories(LSTM_SVD_SHARED PUBLIC ${OpenCv_INCLUDE_DIRS})
+target_link_libraries(LSTM_SVD_SHARED ${OpenCv_LIBS})
+set_property(TARGET LSTM_SVD_SHARED PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 set(LSTM_SVD_EMULATOR_H ${CMAKE_SOURCE_DIR}/include/math_utils/activation_functions.h)
 add_library(LSTM_SVD_EMULATOR STATIC ${CMAKE_SOURCE_DIR}/src/layers/lstm/hls/lstm_svd_emulator.cpp ${LSTM_SVD_EMULATOR_H})
