KernelU_Pruned: initial work on pruned version of Kernel-U.

--- a/src/testbenches/CMakeLists.txt
+++ b/src/testbenches/CMakeLists.txt
@@ -7,6 +7,13 @@ target_include_directories(TEST_U_KERNEL PUBLIC ${OpenCv_INCLUDE_DIRS})
 target_link_libraries(TEST_U_KERNEL ${OpenCv_LIBS})
 target_link_libraries(TEST_U_KERNEL U_KERNEL)
 
+add_executable(TEST_U_KERNEL_PRUNED ${CMAKE_SOURCE_DIR}/src/testbenches/test_u_kernel_pruned.cpp)
+target_include_directories(TEST_U_KERNEL_PRUNED PUBLIC ${CMAKE_SOURCE_DIR}/include)
+target_include_directories(TEST_U_KERNEL_PRUNED PUBLIC ${HLS_INCLUDE_DIRS})
+target_include_directories(TEST_U_KERNEL_PRUNED PUBLIC ${OpenCv_INCLUDE_DIRS})
+target_link_libraries(TEST_U_KERNEL_PRUNED ${OpenCv_LIBS})
+target_link_libraries(TEST_U_KERNEL_PRUNED U_KERNEL)
+
 add_executable(TEST_V_KERNEL ${CMAKE_SOURCE_DIR}/src/testbenches/test_v_kernel.cpp)
 target_include_directories(TEST_V_KERNEL PUBLIC ${CMAKE_SOURCE_DIR}/include)
 target_include_directories(TEST_V_KERNEL PUBLIC ${HLS_INCLUDE_DIRS})
@@ -43,6 +50,7 @@ target_link_libraries(TEST_SVD_KERNEL ${OpenCv_LIBS})
 target_link_libraries(TEST_SVD_KERNEL SVD_KERNEL)
 
 add_test(NAME TestU_Kernel COMMAND TEST_U_KERNEL)
+add_test(NAME TestU_Kernel_Pruned COMMAND TEST_U_KERNEL_PRUNED)
 add_test(NAME TestV_Kernel COMMAND TEST_V_KERNEL)
 add_test(NAME TestGemvKernel COMMAND TEST_GEMV_KERNEL)
 add_test(NAME TestDenseSvd COMMAND TEST_DENSE_SVD)
